@@ -1,3 +1,14 @@
+2005-11-15  Lillian Angel  <langel@redhat.com>
+
+	* gnu/java/awt/peer/gtk/GtkDialogPeer.java
+	(create): Since popups were changed to be JWindowPopups,
+	this code should be done in GtkWindowPeer. Code is not
+	needed.
+	* gnu/java/awt/peer/gtk/GtkWindowPeer.java
+	(create): If window is not focusable, it should not take
+	the focus away from any other window. Therefore, its
+	type should be set to GDK_WINDOW_TYPE_HINT_MENU.
+
 2005-11-15  Roman Kennke  <kennke@aicas.com>
 
 	* javax/swing/plaf/metal/MetalButtonUI.java
